Fix padding for popover product card spacing mobile and cart popover media query (#3410)

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -184,6 +184,10 @@
   transform: translate(-50%);
 }
 
+.card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info .quantity__rules {
+  text-align: left;
+}
+
 @media screen and (min-width: 990px) {
   .grid--6-col-desktop .card__content quick-add-bulk .quantity {
     width: auto;
@@ -209,16 +213,17 @@
     width: calc(3.5rem / var(--font-body-scale));
   }
 
-  .grid--2-col-tablet-down .card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info {
-    width: calc(100% + var(--border-width) + 1rem);
+  .grid--2-col-tablet-down .card--card .card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info,   .grid--2-col-tablet-down .card--standard .card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info  {
+    left: 50%;
+    transform: translate(-50%);
   }
 
   .grid--2-col-tablet-down .card--standard .card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info {
-    width: calc(100% + var(--border-width) + 0.5rem);
+    width: 100%;
   }
 
-  .grid--2-col-tablet-down .card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info .quantity__rules {
-    margin-top: 4.2rem;
+  .grid--2-col-tablet-down .card--card .card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info {
+    width: calc(100% + var(--border-width) + 4rem);
   }
 
   .grid--2-col-tablet-down .card__content quick-add-bulk .quantity {
